fix(intro): Improve spacing for mobile content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -316,7 +316,7 @@ b.max-bold {
 
 @media (min-width: 320px) and (max-width: 1025px) {
   .section {
-    padding: 3rem 0 3rem;
+    padding: 5rem 0 3rem;
   }
 
   .container {
